--- a/_config.yml
+++ b/_config.yml
@@ -1,1 +1,3 @@
 theme: jekyll-theme-cayman
+title: Peloton, C#, IoT, REST API, BlueTooth and Me!
+description: A story of how I built a Peloton Companion App
